--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
+        "start": "concurrently -c \"yellow.bold,green.bold\" -n \"SERVER,CLIENT\" \"nodemon server\\server.js\" \"ng build --watch\"",
+        "build": "ng build --prod --aot --build-optimizer",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
